# Q-Zandronum

./: .gitattributes  .gitignore  CMakeLists.txt  FindDRPC.cmake  FindMPG123.cmake  FindSndFile.cmake  README.md  gzdoom.vcproj  zandronum.sln
GeoIP/: CMakeLists.txt  GeoIP.c  GeoIP.h  GeoIP.vcproj
docs/: Skulltag HOWTO compile.txt  Skulltag TODO List.txt  Skulltag Version History.txt  Skulltag-license.txt  rh-log.txt  zandronum-history.txt  zandronum-launcher-protocol.txt
dumb/: CMakeLists.txt  ChangeLog  release.txt  todo.txt
dumb/docs/: deprec.txt  duhspecs.txt  dumbfull.txt  faq.txt  tutorial.txt
dumb/examples/: dumbout.c
dumb/include/: dumb.h
editors/: GZDoom.cfg  GZDoom_Heretic.cfg  GZDoom_Hexen.cfg
game-music-emu/: CMakeLists.txt  game-music-emu.vcproj
getwad/: GetWAD.sln  readme.txt
getwad/docs/: getwad.hhp  getwad.htm  progref.htm
getwad/setup/: getwad.nsi
getwad/src/: GetWAD.vcproj  base64.c  base64.h  getwad.c  getwad.def  getwad.h  getwad.rc  getwade.c  getwade.def  getwade.rc  getwadrc.h  (+10 more)
lzma/: lzmalib.vcproj
masterserver/: CMakeLists.txt  Makefile  i_system.h  main.cpp  main.h  masterserver.sln  masterserver.vcproj  network.cpp  network.h
output_sdl/: CMakeLists.txt
protocolspec/: spec.game.txt  spec.map.txt  spec.misc.txt  spec.players.txt  spec.print.txt  spec.protocol.txt  spec.sectors.txt  spec.sounds.txt  spec.team.txt  spec.things.txt  spec.txt  spec.weapons.txt
rcon_utility/: MD5Checksum.cpp  MD5Checksum.h  MD5ChecksumDefines.h  RCON Utility To-Do List.txt  i_system.h  main.cpp  main.h  rcon_utility.vcproj  resource.aps  resource.h  resource.rc  zstrformat.cpp  zstring.cpp  zstring.h
specs/: udmf_zdoom.txt
sqlite/: CMakeLists.txt  sqlite3.vcproj
src/: CMakeLists.txt  EnumToString.h  actionspecials.h  actor.h  actorptrselect.cpp  actorptrselect.h  am_map.cpp  announcer.cpp  announcer.h  astar.cpp  astar.h  basictypes.h  botcommands.cpp  botcommands.h  botpath.cpp  botpath.h  bots.cpp  bots.h  browser.cpp  browser.h  c_bind.cpp  c_bind.h  c_cmds.cpp  c_console.cpp  c_console.h  c_cvars.cpp  c_cvars.h  c_dispatch.cpp  c_dispatch.h  callvote.cpp  callvote.h  campaign.cpp  campaign.h  chat.cpp  chat.h  cl_commands.cpp  cl_commands.h  cl_demo.cpp  cl_demo.h  cl_main.cpp  (+247 more)
statsmaker/: CMakeLists.txt  Script1.aps  Script1.rc  Statsmaker To-Do List.txt  Statsmaker Version History.txt  collector.cpp  collector.h  gui.cpp  gui.h  i_system.h  main.cpp  main.h  network.cpp  network.h  protocol_zandronum.cpp  protocol_zandronum.h  protocol_zdaemon.cpp  protocol_zdaemon.h  resource.h  statsmaker.vcproj
upnpnat/: Makefile  test.cpp  upnp-test.sln  upnp-test.vcproj  upnpnat.cpp  upnpnat.h  upnpnat.vcproj  xmlParser.cpp
wadsrc/: CMakeLists.txt  wadsrc.vcproj
wadsrc_st/: CMakeLists.txt  skulltag_actors.vcproj
wikifiles/: zcommon.bcs  zdefs.acs  zspecial.acs
(+630 files in other folders)
